Add the changes

--- a/index.html
+++ b/index.html
@@ -9,39 +9,52 @@
 </head>
 <body>
   <button class="toggle-btn" onclick="toggleTheme()">Toggle Light Mode</button>
+  <nav class="mobile-nav">
+  <button class="hamburger" onclick="toggleMenu()">☰</button>
+  <ul class="nav-links">
+    <li><a href="#about">About</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
   <header>
-    <h1>Adeboye Emmanuel Oluwatosin</h1>
-    <p>Web Developer | Designer | Programmer</p>
-  </header>
+  <img src="images/emmanuel.jpg" alt="Adeboye Emmanuel Oluwatosin" class="profile-pic" />
+  <h1>Adeboye Emmanuel Oluwatosin</h1>
+  <p>Web Developer | Designer | Programmer</p>
+</header>
+
 
   <main>
     <section class="about">
       <h2>About Me</h2>
-      <p>I'm a passionate and self-driven web developer with a growing portfolio of frontend projects. I enjoy bringing ideas to life through code, and I constantly explore new technologies to improve my skills. My goal is to become a highly versatile full-stack developer who builds impactful solutions for the web.</p>
+      <p>I’m a front-end web developer driven by a deep passion for technology and clean, user-focused design. I specialize in creating responsive, accessible, and engaging web interfaces using HTML, CSS, JavaScript, ReactJS, and Angular. My development approach blends creativity with precision, ensuring each project not only looks great but also functions seamlessly across devices and platforms.
+
+My journey into tech was fueled by curiosity and a desire to build meaningful digital experiences. I’m constantly learning, exploring new tools, and staying updated with the latest trends in front-end development. Whether I’m building from scratch, improving performance, or collaborating with a team, I bring energy, focus, and a problem-solving mindset to every line of code.</p>
     </section>
 
     <section class="project">
       <h2>BR-Architects</h2>
       <p>A professional website template for architectural firms, showcasing modern layouts and minimal design.</p>
-      <a href="https://github.com/Emmanuel00885566/Architect-Clone" target="_blank">View Project</a>
+      <a href="https://architect-clone.vercel.app/" target="_blank">View Project</a>
     </section>
 
     <section class="project">
       <h2>Social App Template</h2>
       <p>A sleek front-end design for a modern social media platform, with user profile and feed mockups.</p>
-      <a href="https://github.com/Emmanuel00885566/social-app" target="_blank">View Project</a>
+      <a href="https://social-app-pi-black.vercel.app/" target="_blank">View Project</a>
     </section>
 
     <section class="project">
       <h2>To-Do List Site</h2>
       <p>A productivity tool built to help users manage daily tasks with CRUD functionality and intuitive UX.</p>
-      <a href="https://github.com/Emmanuel00885566/to-do-list" target="_blank">View Project</a>
+      <a href="https://to-do-list-ashen-pi.vercel.app/" target="_blank">View Project</a>
     </section>
 
     <section class="project">
       <h2>Awake Emporium</h2>
       <p>A clean and vibrant fabrics sale site built for e-commerce, including product listings and cart mockups.</p>
-      <a href="https://github.com/Emmanuel00885566/Awake" target="_blank">View Project</a>
+      <a href="https://awake-green.vercel.app/" target="_blank">View Project</a>
     </section>
   </main>
 
