Made some changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ My journey into tech was fueled by curiosity and a desire to build meaningful di
     <section class="project">
       <h2>To-Do List Site</h2>
       <p>A productivity tool built to help users manage daily tasks with CRUD functionality and intuitive UX.</p>
-      <a href="https://to-do-list-ashen-pi.vercel.app/" target="_blank">View Project</a>
+      <a href="https://to-do-list-delta-indol-14.vercel.app/" target="_blank">View Project</a>
     </section>
 
     <section class="project">
