Added React Site

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
         <div class="project-card" data-aos="fade-up" data-aos-delay="400">
           <h3>Awake Emporium</h3>
-          <p>A clean and vibrant fabrics sale site built for e-commerce, including product listings and cart mockups.</p>
-          <a href="https://awake-green.vercel.app/" target="_blank">View Project</a>
+          <p>A modern fabric shop interface designed with React.js and TailwindCSS. It showcases smooth animations, neat product displays, and a functional cart flow, giving a lively feel of an actual online store.</p>
+          <a href="https://awake-emporium-frontend.vercel.app/" target="_blank">View Project</a>
         </div>
       </div>
     </section>
